--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h1> Will you be my Valentines?</h1>
         <button id="yes">Yes</button>
         <button id="no">No</button>
+        
+        <audio id="sad-sound" src="BOINK SOUND EFFECT  NO COPYRIGHT.mp3"></audio>
 
     </div>
 
@@ -28,6 +30,8 @@
     </style>
 
     <script>
+        const sadSound = document.getElementById("sad-sound");
+        
         document.getElementById("yes").addEventListener("click", function(){
             alert("I love you, See you soon!");
         });
@@ -35,6 +39,7 @@
             b.addEventListener("mouseover", changeLoc);
 
             function changeLoc(){
+                sadSound.play();
                 var i = Math.floor(Math.random()*1000)+1;
                 var j = Math.floor(Math.random()*700)+1;
                 b.style.left = i+"px";
